# cookiecutter-dsci

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Makefile  README.md  mkdocs.yaml  mkdocs.yml  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/config/: README.md  __init__.py  config.yaml  main.py
{{cookiecutter.project_name}}/config/etl/: db.py  db.yaml
{{cookiecutter.project_name}}/data/: README.md
{{cookiecutter.project_name}}/docs/: README.md  reference.md
{{cookiecutter.project_name}}/docs/data_dics/: README.md
{{cookiecutter.project_name}}/docs/references/: README.md
{{cookiecutter.project_name}}/notebooks/: README.md
{{cookiecutter.project_name}}/output/: README.md
{{cookiecutter.project_name}}/output/features/: README.md
{{cookiecutter.project_name}}/output/models/: README.md
{{cookiecutter.project_name}}/output/reports/: README.md
{{cookiecutter.project_name}}/output/reports/data/: README.md
{{cookiecutter.project_name}}/pipelines/tests/: test_etl.py
{{cookiecutter.project_name}}/pipelines/{{cookiecutter.project_name}}/: etl.py  noxfile.py
{{cookiecutter.project_name}}/src/: process.py
{{cookiecutter.project_name}}/src/process/: __init__.py  etl.py  train.py
{{cookiecutter.project_name}}/tests/: test_config.py  test_etl.py
