[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"
homepage = "{{cookiecutter.__git_repo}}"
repository = "{{cookiecutter.__git_repo}}"
documentation = "https://{{cookiecutter.project_name}}.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
Changelog = "{{cookiecutter.__git_repo}}/releases"

[tool.poetry.dependencies]
python = "^3.10.6"
typer = "^0.6.1"
requests = "^2.28.1"
prefect = "^2.2.0"
pandas = "^1.4.3"
numpy = "^1.23.2"
pyodbc = "^4.0.34"
SQLAlchemy = "^1.4.40"
sqlalchemy-access = "^1.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pep8-naming = "^0.13.2"
black = "^22.6.0"
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.3.0"
pytest = "^7.1.2"
mypy = "^0.971"
typeguard = "^2.13.3"
mkdocs = "^1.3.1"
mkdocstrings = "^0.19.0"
mkdocs-material = "^8.4.2"
mkdocstrings-python = "^0.7.1"
isort = "^5.10.1"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
